name:                kontroli
version:             0.1.0.0
synopsis:            Alternative implementation of the logical framework Dedukti
license:             GPL-3
license-file:        LICENSE
author:              Michael Färber
maintainer:          michael.faerber@gedenkt.at
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable kontroli
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.13,
                       attoparsec >= 0.13,
                       bytestring >= 0.10,
                       unordered-containers >= 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
